Fix z-index on inline toolbar

--- a/app/frontend/stylesheets/admin/editor-blocks/editor.sass
+++ b/app/frontend/stylesheets/admin/editor-blocks/editor.sass
@@ -8,6 +8,9 @@
 .cdx-block--custom-focus
   z-index: 10
 
+.ce-inline-toolbar
+  z-index: 10
+
 // OPTIONS
 .cdx-options i.icon
   height: auto
